cmd/npool-scheduler/k8s/01-npool-scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: npool-scheduler
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: npool-scheduler
  template:
    metadata:
      labels:
        app: npool-scheduler
    spec:
      containers:
      - name: npool-scheduler
        image: uhub.service.ucloud.cn/entropypool/npool-scheduler:latest
        imagePullPolicy: Always
        volumes:
          - name: service-config
            configMap:
              name: npool-scheduler-config
              items:
                - key: service-conf
                  path: NpoolScheduler.viper.yaml
        resources:
          requests:
            memory: "200Mi"
            cpu: "350m"
          limits:
            memory: "200Mi"
            cpu: "350m"

---
apiVersion: v1
kind: Service
metadata:
  name: npool-scheduler
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50180
    targetPort: 50180
  - name: grpc
    port: 50181
    targetPort: 50181
  - name: prometheus
    port: 50182
    targetPort: 50182
  selector:
    app: npool-scheduler
