cmd/npool-scheduler/k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: npool-scheduler-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: npool-scheduler
    k8s.kuboard.cn/workload: npool-scheduler
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-subscribe-manager-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/npool-scheduler/version
            backend:
              serviceName: npool-scheduler
              servicePort: 50180
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
    - host: api.ohhash-production.npool.top
      http: *http_rules
    - host: api.japan-procyon-production.npool.top
      http: *http_rules
    - host: api.jh-testing.npool.top
      http: *http_rules
    - host: api.jh-development.npool.top
      http: *http_rules
    - host: api.singapore-testing.npool.top
      http: *http_rules

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-npool-scheduler-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/npool-scheduler
